compiler/testData/diagnostics/tests/valueParameterWithoutExplicitType.kt
// RUN_PIPELINE_TILL: FRONTEND
fun foo(
    <!VALUE_PARAMETER_WITH_NO_TYPE_ANNOTATION!>x<!>
) {}